--- a/application/admin/view/article/add.html
+++ b/application/admin/view/article/add.html
@@ -67,9 +67,9 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">文章分类</label>
                         <div class="layui-input-block">
-                            <select name="category_id" lay-verify="required" autocomplete="off">
+                            <select name="cat_id" lay-verify="required" autocomplete="off">
                                 {volist name='lists' id='vo'}
-                                <option value="{$vo.id}" {if condition="$category_id eq $vo.id"}selected{/if}>{$vo.title_show}</option>
+                                <option value="{$vo.id}" {if condition="$cat_id eq $vo.id"}selected{/if}>{$vo.title_show}</option>
                                 {/volist}
                             </select>
                         </div>
